# src/routes/Comment.ts
@@ -9,6 +9,6 @@ const router = express.Router();
 
 router.post('/add', isLoggedIn, addComment);
 router.delete('/remove', isLoggedIn, removeComment);
-router.get('/:id', getComment);
+router.get('/:commentId', getComment);
 
 export default router;
