# src/routes/Museum.ts
@@ -6,6 +6,7 @@ import {
   favMuseum,
   removeFavMuseum,
   getFavMuseums,
+  getMuseumComments,
 } from '../controllers/Museum';
 import isLoggedIn from '../middlewares/auth/isLoggedIn';
 const router = express.Router();
@@ -16,5 +17,6 @@ router.post('/remove-favorite', isLoggedIn, removeFavMuseum);
 router.get('/fav-museums', isLoggedIn, getFavMuseums);
 router.get('/filter', filterMuseumsByCity);
 router.get('/:id', getMuseum);
+router.get('/:id/comments', getMuseumComments);
 
 export default router;
